some impl moved to impl modules from ide-impl